load("@build_bazel_rules_swift//swift:swift.bzl", "swift_interop_hint", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

cc_library(
    name = "_InstructionCounter.rspm",
    aspect_hints = [":_InstructionCounter.rspm_swift_hint"],
    copts = [
        "-fblocks",
        "-fobjc-arc",
        "-fPIC",
        "-fmodule-name=_InstructionCounter",
        "-DSWIFT_PACKAGE=1",
    ],
    hdrs = ["Sources/_InstructionCounter/include/InstructionsExecuted.h"],
    includes = ["Sources/_InstructionCounter/include"],
    srcs = ["Sources/_InstructionCounter/src/InstructionsExecuted.c"],
    textual_hdrs = ["Sources/_InstructionCounter/src/InstructionsExecuted.c"],
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "_SwiftLibraryPluginProviderCShims.rspm",
    aspect_hints = [":_SwiftLibraryPluginProviderCShims.rspm_swift_hint"],
    copts = [
        "-fblocks",
        "-fobjc-arc",
        "-fPIC",
        "-fmodule-name=_SwiftLibraryPluginProviderCShims",
        "-DSWIFT_PACKAGE=1",
    ],
    hdrs = ["Sources/_SwiftLibraryPluginProviderCShims/include/LoadLibrary.h"],
    includes = ["Sources/_SwiftLibraryPluginProviderCShims/include"],
    srcs = ["Sources/_SwiftLibraryPluginProviderCShims/LoadLibrary.c"],
    textual_hdrs = ["Sources/_SwiftLibraryPluginProviderCShims/LoadLibrary.c"],
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "_SwiftSyntaxCShims.rspm",
    aspect_hints = [":_SwiftSyntaxCShims.rspm_swift_hint"],
    copts = [
        "-fblocks",
        "-fobjc-arc",
        "-fPIC",
        "-fmodule-name=_SwiftSyntaxCShims",
        "-DSWIFT_PACKAGE=1",
    ],
    hdrs = [
        "Sources/_SwiftSyntaxCShims/include/AtomicBool.h",
        "Sources/_SwiftSyntaxCShims/include/SwiftSyntaxCShims.h",
        "Sources/_SwiftSyntaxCShims/include/_includes.h",
        "Sources/_SwiftSyntaxCShims/include/swiftsyntax_errno.h",
        "Sources/_SwiftSyntaxCShims/include/swiftsyntax_stdio.h",
    ],
    includes = ["Sources/_SwiftSyntaxCShims/include"],
    srcs = ["Sources/_SwiftSyntaxCShims/dummy.c"],
    textual_hdrs = ["Sources/_SwiftSyntaxCShims/dummy.c"],
    visibility = ["//:__subpackages__"],
)

license(
    name = "license.rspm",
    license_text = "LICENSE.txt",
)

package_info(
    name = "package_info.rspm",
    package_name = "swift-syntax",
    package_url = "https://github.com/swiftlang/swift-syntax",
    package_version = "600.0.1",
)

swift_interop_hint(
    name = "_InstructionCounter.rspm_swift_hint",
    module_name = "_InstructionCounter",
)

swift_interop_hint(
    name = "_SwiftLibraryPluginProviderCShims.rspm_swift_hint",
    module_name = "_SwiftLibraryPluginProviderCShims",
)

swift_interop_hint(
    name = "_SwiftSyntaxCShims.rspm_swift_hint",
    module_name = "_SwiftSyntaxCShims",
)

swift_library(
    name = "SwiftBasicFormat.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntax.rspm"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftBasicFormat",
    srcs = [
        "Sources/SwiftBasicFormat/BasicFormat.swift",
        "Sources/SwiftBasicFormat/InferIndentation.swift",
        "Sources/SwiftBasicFormat/Syntax+Extensions.swift",
        "Sources/SwiftBasicFormat/SyntaxProtocol+Formatted.swift",
        "Sources/SwiftBasicFormat/Trivia+FormatExtensions.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftCompilerPlugin.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftCompilerPluginMessageHandling.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftCompilerPlugin",
    srcs = ["Sources/SwiftCompilerPlugin/CompilerPlugin.swift"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftCompilerPluginMessageHandling.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:_SwiftSyntaxCShims.rspm",
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftOperators.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacroExpansion.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftCompilerPluginMessageHandling",
    srcs = [
        "Sources/SwiftCompilerPluginMessageHandling/CompilerPluginMessageHandler.swift",
        "Sources/SwiftCompilerPluginMessageHandling/Diagnostics.swift",
        "Sources/SwiftCompilerPluginMessageHandling/JSON/CodingUtilities.swift",
        "Sources/SwiftCompilerPluginMessageHandling/JSON/JSON.swift",
        "Sources/SwiftCompilerPluginMessageHandling/JSON/JSONDecoding.swift",
        "Sources/SwiftCompilerPluginMessageHandling/JSON/JSONEncoding.swift",
        "Sources/SwiftCompilerPluginMessageHandling/LRUCache.swift",
        "Sources/SwiftCompilerPluginMessageHandling/Macros.swift",
        "Sources/SwiftCompilerPluginMessageHandling/PluginMacroExpansionContext.swift",
        "Sources/SwiftCompilerPluginMessageHandling/PluginMessageCompatibility.swift",
        "Sources/SwiftCompilerPluginMessageHandling/PluginMessages.swift",
        "Sources/SwiftCompilerPluginMessageHandling/StandardIOMessageConnection.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftDiagnostics.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntax.rspm"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftDiagnostics",
    srcs = [
        "Sources/SwiftDiagnostics/Convenience.swift",
        "Sources/SwiftDiagnostics/Diagnostic.swift",
        "Sources/SwiftDiagnostics/DiagnosticDecorators/ANSIDiagnosticDecorator.swift",
        "Sources/SwiftDiagnostics/DiagnosticDecorators/BasicDiagnosticDecorator.swift",
        "Sources/SwiftDiagnostics/DiagnosticDecorators/DiagnosticDecorator.swift",
        "Sources/SwiftDiagnostics/DiagnosticsFormatter.swift",
        "Sources/SwiftDiagnostics/FixIt.swift",
        "Sources/SwiftDiagnostics/GroupedDiagnostics.swift",
        "Sources/SwiftDiagnostics/Message.swift",
        "Sources/SwiftDiagnostics/Note.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftIDEUtils.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftIDEUtils",
    srcs = [
        "Sources/SwiftIDEUtils/DeclNameLocation.swift",
        "Sources/SwiftIDEUtils/FixItApplier.swift",
        "Sources/SwiftIDEUtils/NameMatcher.swift",
        "Sources/SwiftIDEUtils/SwiftIDEUtilsCompatibility.swift",
        "Sources/SwiftIDEUtils/Syntax+Classifications.swift",
        "Sources/SwiftIDEUtils/SyntaxClassification.swift",
        "Sources/SwiftIDEUtils/SyntaxClassifier.swift",
        "Sources/SwiftIDEUtils/Utils.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftLibraryPluginProvider.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros.rspm",
        "@swiftpkg_swift_syntax//:SwiftCompilerPluginMessageHandling.rspm",
        "@swiftpkg_swift_syntax//:_SwiftLibraryPluginProviderCShims.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftLibraryPluginProvider",
    srcs = ["Sources/SwiftLibraryPluginProvider/LibraryPluginProvider.swift"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftOperators.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftOperators",
    srcs = [
        "Sources/SwiftOperators/Operator.swift",
        "Sources/SwiftOperators/OperatorError+Diagnostics.swift",
        "Sources/SwiftOperators/OperatorError.swift",
        "Sources/SwiftOperators/OperatorTable+Defaults.swift",
        "Sources/SwiftOperators/OperatorTable+Folding.swift",
        "Sources/SwiftOperators/OperatorTable+Semantics.swift",
        "Sources/SwiftOperators/OperatorTable.swift",
        "Sources/SwiftOperators/PrecedenceGraph.swift",
        "Sources/SwiftOperators/PrecedenceGroup.swift",
        "Sources/SwiftOperators/SyntaxSynthesis.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftParser.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntax.rspm"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftParser",
    srcs = [
        "Sources/SwiftParser/Attributes.swift",
        "Sources/SwiftParser/Availability.swift",
        "Sources/SwiftParser/CharacterInfo.swift",
        "Sources/SwiftParser/CollectionNodes+Parsable.swift",
        "Sources/SwiftParser/Declarations.swift",
        "Sources/SwiftParser/Directives.swift",
        "Sources/SwiftParser/ExpressionInterpretedAsVersionTuple.swift",
        "Sources/SwiftParser/Expressions.swift",
        "Sources/SwiftParser/IncrementalParseTransition.swift",
        "Sources/SwiftParser/IsValidIdentifier.swift",
        "Sources/SwiftParser/Lexer/Cursor.swift",
        "Sources/SwiftParser/Lexer/Lexeme.swift",
        "Sources/SwiftParser/Lexer/LexemeSequence.swift",
        "Sources/SwiftParser/Lexer/Lexer.swift",
        "Sources/SwiftParser/Lexer/RegexLiteralLexer.swift",
        "Sources/SwiftParser/Lexer/UnicodeScalarExtensions.swift",
        "Sources/SwiftParser/Lookahead.swift",
        "Sources/SwiftParser/LoopProgressCondition.swift",
        "Sources/SwiftParser/Modifiers.swift",
        "Sources/SwiftParser/Names.swift",
        "Sources/SwiftParser/Nominals.swift",
        "Sources/SwiftParser/Parameters.swift",
        "Sources/SwiftParser/ParseSourceFile.swift",
        "Sources/SwiftParser/Parser.swift",
        "Sources/SwiftParser/Patterns.swift",
        "Sources/SwiftParser/Recovery.swift",
        "Sources/SwiftParser/Specifiers.swift",
        "Sources/SwiftParser/Statements.swift",
        "Sources/SwiftParser/StringLiteralRepresentedLiteralValue.swift",
        "Sources/SwiftParser/StringLiterals.swift",
        "Sources/SwiftParser/SwiftParserCompatibility.swift",
        "Sources/SwiftParser/SwiftVersion.swift",
        "Sources/SwiftParser/SyntaxUtils.swift",
        "Sources/SwiftParser/TokenConsumer.swift",
        "Sources/SwiftParser/TokenPrecedence.swift",
        "Sources/SwiftParser/TokenSpec.swift",
        "Sources/SwiftParser/TokenSpecSet.swift",
        "Sources/SwiftParser/TopLevel.swift",
        "Sources/SwiftParser/TriviaParser.swift",
        "Sources/SwiftParser/Types.swift",
        "Sources/SwiftParser/generated/ExperimentalFeatures.swift",
        "Sources/SwiftParser/generated/IsLexerClassified.swift",
        "Sources/SwiftParser/generated/LayoutNodes+Parsable.swift",
        "Sources/SwiftParser/generated/Parser+TokenSpecSet.swift",
        "Sources/SwiftParser/generated/TokenSpecStaticMembers.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftParserDiagnostics.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftBasicFormat.rspm",
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftParserDiagnostics",
    srcs = [
        "Sources/SwiftParserDiagnostics/DiagnosticExtensions.swift",
        "Sources/SwiftParserDiagnostics/LexerDiagnosticMessages.swift",
        "Sources/SwiftParserDiagnostics/MissingNodesError.swift",
        "Sources/SwiftParserDiagnostics/MissingTokenError.swift",
        "Sources/SwiftParserDiagnostics/MultiLineStringLiteralDiagnosticsGenerator.swift",
        "Sources/SwiftParserDiagnostics/ParseDiagnosticsGenerator.swift",
        "Sources/SwiftParserDiagnostics/ParserDiagnosticMessages.swift",
        "Sources/SwiftParserDiagnostics/PresenceUtils.swift",
        "Sources/SwiftParserDiagnostics/SyntaxExtensions.swift",
        "Sources/SwiftParserDiagnostics/Utils.swift",
        "Sources/SwiftParserDiagnostics/generated/ChildNameForDiagnostics.swift",
        "Sources/SwiftParserDiagnostics/generated/SyntaxKindNameForDiagnostics.swift",
        "Sources/SwiftParserDiagnostics/generated/TokenNameForDiagnostics.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftRefactor.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftBasicFormat.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftRefactor",
    srcs = [
        "Sources/SwiftRefactor/AddSeparatorsToIntegerLiteral.swift",
        "Sources/SwiftRefactor/CallToTrailingClosures.swift",
        "Sources/SwiftRefactor/ExpandEditorPlaceholder.swift",
        "Sources/SwiftRefactor/FormatRawStringLiteral.swift",
        "Sources/SwiftRefactor/IntegerLiteralUtilities.swift",
        "Sources/SwiftRefactor/MigrateToNewIfLetSyntax.swift",
        "Sources/SwiftRefactor/OpaqueParameterToGeneric.swift",
        "Sources/SwiftRefactor/RefactoringProvider.swift",
        "Sources/SwiftRefactor/RemoveSeparatorsFromIntegerLiteral.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntax-all.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:_SwiftSyntaxCShims.rspm",
        "@swiftpkg_swift_syntax//:_InstructionCounter.rspm",
        "@swiftpkg_swift_syntax//:_SwiftSyntaxTestSupport.rspm",
        "@swiftpkg_swift_syntax//:_SwiftSyntaxGenericTestSupport.rspm",
        "@swiftpkg_swift_syntax//:SwiftBasicFormat.rspm",
        "@swiftpkg_swift_syntax//:SwiftCompilerPlugin.rspm",
        "@swiftpkg_swift_syntax//:SwiftCompilerPluginMessageHandling.rspm",
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftIDEUtils.rspm",
        "@swiftpkg_swift_syntax//:SwiftLibraryPluginProvider.rspm",
        "@swiftpkg_swift_syntax//:_SwiftLibraryPluginProviderCShims.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax509.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax510.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax600.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacroExpansion.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacrosTestSupport.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacrosGenericTestSupport.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
        "@swiftpkg_swift_syntax//:SwiftParserDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftOperators.rspm",
        "@swiftpkg_swift_syntax//:SwiftRefactor.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntax_all",
    srcs = ["Sources/SwiftSyntax-all/empty.swift"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntax.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:_SwiftSyntaxCShims.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax509.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax510.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax600.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntax",
    srcs = [
        "Sources/SwiftSyntax/AbsolutePosition.swift",
        "Sources/SwiftSyntax/AbsoluteRawSyntax.swift",
        "Sources/SwiftSyntax/AbsoluteSyntaxInfo.swift",
        "Sources/SwiftSyntax/Assert.swift",
        "Sources/SwiftSyntax/BumpPtrAllocator.swift",
        "Sources/SwiftSyntax/CommonAncestor.swift",
        "Sources/SwiftSyntax/Convenience.swift",
        "Sources/SwiftSyntax/CustomTraits.swift",
        "Sources/SwiftSyntax/Identifier.swift",
        "Sources/SwiftSyntax/MemoryLayout.swift",
        "Sources/SwiftSyntax/MissingNodeInitializers.swift",
        "Sources/SwiftSyntax/Raw/RawSyntax.swift",
        "Sources/SwiftSyntax/Raw/RawSyntaxLayoutView.swift",
        "Sources/SwiftSyntax/Raw/RawSyntaxNodeProtocol.swift",
        "Sources/SwiftSyntax/Raw/RawSyntaxTokenView.swift",
        "Sources/SwiftSyntax/SourceEdit.swift",
        "Sources/SwiftSyntax/SourceLength.swift",
        "Sources/SwiftSyntax/SourceLocation.swift",
        "Sources/SwiftSyntax/SourcePresence.swift",
        "Sources/SwiftSyntax/SwiftSyntaxCompatibility.swift",
        "Sources/SwiftSyntax/Syntax.swift",
        "Sources/SwiftSyntax/SyntaxArena.swift",
        "Sources/SwiftSyntax/SyntaxArenaAllocatedBuffer.swift",
        "Sources/SwiftSyntax/SyntaxChildren.swift",
        "Sources/SwiftSyntax/SyntaxCollection.swift",
        "Sources/SwiftSyntax/SyntaxHashable.swift",
        "Sources/SwiftSyntax/SyntaxIdentifier.swift",
        "Sources/SwiftSyntax/SyntaxNodeFactory.swift",
        "Sources/SwiftSyntax/SyntaxNodeStructure.swift",
        "Sources/SwiftSyntax/SyntaxProtocol.swift",
        "Sources/SwiftSyntax/SyntaxText.swift",
        "Sources/SwiftSyntax/SyntaxTreeViewMode.swift",
        "Sources/SwiftSyntax/TokenDiagnostic.swift",
        "Sources/SwiftSyntax/TokenSequence.swift",
        "Sources/SwiftSyntax/TokenSyntax.swift",
        "Sources/SwiftSyntax/Trivia.swift",
        "Sources/SwiftSyntax/Utils.swift",
        "Sources/SwiftSyntax/generated/ChildNameForKeyPath.swift",
        "Sources/SwiftSyntax/generated/Keyword.swift",
        "Sources/SwiftSyntax/generated/RenamedChildrenCompatibility.swift",
        "Sources/SwiftSyntax/generated/RenamedNodesCompatibility.swift",
        "Sources/SwiftSyntax/generated/SyntaxAnyVisitor.swift",
        "Sources/SwiftSyntax/generated/SyntaxBaseNodes.swift",
        "Sources/SwiftSyntax/generated/SyntaxCollections.swift",
        "Sources/SwiftSyntax/generated/SyntaxEnum.swift",
        "Sources/SwiftSyntax/generated/SyntaxKind.swift",
        "Sources/SwiftSyntax/generated/SyntaxRewriter.swift",
        "Sources/SwiftSyntax/generated/SyntaxTraits.swift",
        "Sources/SwiftSyntax/generated/SyntaxVisitor.swift",
        "Sources/SwiftSyntax/generated/TokenKind.swift",
        "Sources/SwiftSyntax/generated/Tokens.swift",
        "Sources/SwiftSyntax/generated/TriviaPieces.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesAB.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesC.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesD.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesEF.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesGHI.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesJKLMN.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesOP.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesQRS.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxNodesTUVWXYZ.swift",
        "Sources/SwiftSyntax/generated/raw/RawSyntaxValidation.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesAB.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesC.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesD.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesEF.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesGHI.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesJKLMN.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesOP.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesQRS.swift",
        "Sources/SwiftSyntax/generated/syntaxNodes/SyntaxNodesTUVWXYZ.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntax509.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntax509",
    srcs = ["Sources/VersionMarkerModules/SwiftSyntax509/Empty.swift"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntax510.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntax510",
    srcs = ["Sources/VersionMarkerModules/SwiftSyntax510/Empty.swift"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntax600.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntax600",
    srcs = ["Sources/VersionMarkerModules/SwiftSyntax600/Empty.swift"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntaxBuilder.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftBasicFormat.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftParserDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntaxBuilder",
    srcs = [
        "Sources/SwiftSyntaxBuilder/ConvenienceInitializers.swift",
        "Sources/SwiftSyntaxBuilder/DeclSyntaxParseable.swift",
        "Sources/SwiftSyntaxBuilder/Indenter.swift",
        "Sources/SwiftSyntaxBuilder/ListBuilder.swift",
        "Sources/SwiftSyntaxBuilder/ResultBuilderExtensions.swift",
        "Sources/SwiftSyntaxBuilder/SwiftSyntaxBuilderCompatibility.swift",
        "Sources/SwiftSyntaxBuilder/Syntax+StringInterpolation.swift",
        "Sources/SwiftSyntaxBuilder/SyntaxNodeWithBody.swift",
        "Sources/SwiftSyntaxBuilder/SyntaxParsable+ExpressibleByStringInterpolation.swift",
        "Sources/SwiftSyntaxBuilder/ValidatingSyntaxNodes.swift",
        "Sources/SwiftSyntaxBuilder/WithTrailingCommaSyntax+EnsuringTrailingComma.swift",
        "Sources/SwiftSyntaxBuilder/generated/BuildableNodes.swift",
        "Sources/SwiftSyntaxBuilder/generated/RenamedChildrenBuilderCompatibility.swift",
        "Sources/SwiftSyntaxBuilder/generated/ResultBuilders.swift",
        "Sources/SwiftSyntaxBuilder/generated/SyntaxExpressibleByStringInterpolationConformances.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntaxMacroExpansion.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros.rspm",
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftOperators.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntaxMacroExpansion",
    srcs = [
        "Sources/SwiftSyntaxMacroExpansion/BasicMacroExpansionContext.swift",
        "Sources/SwiftSyntaxMacroExpansion/FunctionParameterUtils.swift",
        "Sources/SwiftSyntaxMacroExpansion/IndentationUtils.swift",
        "Sources/SwiftSyntaxMacroExpansion/MacroArgument.swift",
        "Sources/SwiftSyntaxMacroExpansion/MacroExpansion.swift",
        "Sources/SwiftSyntaxMacroExpansion/MacroExpansionDiagnosticMessages.swift",
        "Sources/SwiftSyntaxMacroExpansion/MacroReplacement.swift",
        "Sources/SwiftSyntaxMacroExpansion/MacroSpec.swift",
        "Sources/SwiftSyntaxMacroExpansion/MacroSystem.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntaxMacros.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntaxMacros",
    srcs = [
        "Sources/SwiftSyntaxMacros/AbstractSourceLocation.swift",
        "Sources/SwiftSyntaxMacros/MacroExpansionContext.swift",
        "Sources/SwiftSyntaxMacros/MacroExpansionDiagnosticMessages.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/AccessorMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/AttachedMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/BodyMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/CodeItemMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/DeclarationMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/ExpressionMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/ExtensionMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/FreestandingMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/Macro+Format.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/Macro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/MemberAttributeMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/MemberMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/PeerMacro.swift",
        "Sources/SwiftSyntaxMacros/MacroProtocols/PreambleMacro.swift",
        "Sources/SwiftSyntaxMacros/Syntax+LexicalContext.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntaxMacrosGenericTestSupport.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:_SwiftSyntaxGenericTestSupport.rspm",
        "@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm",
        "@swiftpkg_swift_syntax//:SwiftIDEUtils.rspm",
        "@swiftpkg_swift_syntax//:SwiftParser.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacroExpansion.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntaxMacrosGenericTestSupport",
    srcs = ["Sources/SwiftSyntaxMacrosGenericTestSupport/Assertions.swift"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "SwiftSyntaxMacrosTestSupport.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacroExpansion.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacrosGenericTestSupport.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "SwiftSyntaxMacrosTestSupport",
    srcs = ["Sources/SwiftSyntaxMacrosTestSupport/Assertions.swift"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "_SwiftSyntaxGenericTestSupport.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "_SwiftSyntaxGenericTestSupport",
    srcs = [
        "Sources/_SwiftSyntaxGenericTestSupport/AssertEqualWithDiff.swift",
        "Sources/_SwiftSyntaxGenericTestSupport/String+TrimmingTrailingWhitespace.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "_SwiftSyntaxTestSupport.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_syntax//:_SwiftSyntaxGenericTestSupport.rspm",
        "@swiftpkg_swift_syntax//:SwiftBasicFormat.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntax.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder.rspm",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacroExpansion.rspm",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "_SwiftSyntaxTestSupport",
    srcs = [
        "Sources/_SwiftSyntaxTestSupport/AssertEqualWithDiff.swift",
        "Sources/_SwiftSyntaxTestSupport/IncrementalParseTestUtils.swift",
        "Sources/_SwiftSyntaxTestSupport/LocationMarkers.swift",
        "Sources/_SwiftSyntaxTestSupport/LongTestsDisabled.swift",
        "Sources/_SwiftSyntaxTestSupport/Syntax+Assertions.swift",
        "Sources/_SwiftSyntaxTestSupport/SyntaxComparison.swift",
        "Sources/_SwiftSyntaxTestSupport/SyntaxProtocol+Initializer.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "SwiftBasicFormat",
    deps = ["@swiftpkg_swift_syntax//:SwiftBasicFormat.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftCompilerPlugin",
    deps = ["@swiftpkg_swift_syntax//:SwiftCompilerPlugin.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftDiagnostics",
    deps = ["@swiftpkg_swift_syntax//:SwiftDiagnostics.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftIDEUtils",
    deps = ["@swiftpkg_swift_syntax//:SwiftIDEUtils.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftOperators",
    deps = ["@swiftpkg_swift_syntax//:SwiftOperators.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftParser",
    deps = ["@swiftpkg_swift_syntax//:SwiftParser.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftParserDiagnostics",
    deps = ["@swiftpkg_swift_syntax//:SwiftParserDiagnostics.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftRefactor",
    deps = ["@swiftpkg_swift_syntax//:SwiftRefactor.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftSyntax",
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntax.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftSyntaxBuilder",
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntaxBuilder.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftSyntaxMacroExpansion",
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntaxMacroExpansion.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftSyntaxMacros",
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntaxMacros.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftSyntaxMacrosGenericTestSupport",
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntaxMacrosGenericTestSupport.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "SwiftSyntaxMacrosTestSupport",
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntaxMacrosTestSupport.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "_SwiftCompilerPluginMessageHandling",
    deps = ["@swiftpkg_swift_syntax//:SwiftCompilerPluginMessageHandling.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "_SwiftLibraryPluginProvider",
    deps = ["@swiftpkg_swift_syntax//:SwiftLibraryPluginProvider.rspm"],
    visibility = ["//visibility:public"],
)
