load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

license(
    name = "license.rspm",
    license_text = "LICENSE",
)

package_info(
    name = "package_info.rspm",
    package_name = "xctest-dynamic-overlay",
    package_url = "https://github.com/pointfreeco/xctest-dynamic-overlay",
    package_version = "1.4.2",
)

swift_binary(
    name = "WasmTests.rspm",
    copts = ["-DSWIFT_PACKAGE"],
    deps = ["@swiftpkg_xctest_dynamic_overlay//:IssueReporting.rspm"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "WasmTests",
    package_name = "xctest-dynamic-overlay",
    srcs = ["Sources/WasmTests/main.swift"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "IssueReporting.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "IssueReporting",
    package_name = "xctest-dynamic-overlay",
    srcs = [
        "Sources/IssueReporting/Internal/AppHostWarning.swift",
        "Sources/IssueReporting/Internal/Deprecations.swift",
        "Sources/IssueReporting/Internal/FailureObserver.swift",
        "Sources/IssueReporting/Internal/LockIsolated.swift",
        "Sources/IssueReporting/Internal/Rethrows.swift",
        "Sources/IssueReporting/Internal/SwiftTesting.swift",
        "Sources/IssueReporting/Internal/UncheckedSendable.swift",
        "Sources/IssueReporting/Internal/Warn.swift",
        "Sources/IssueReporting/Internal/XCTest.swift",
        "Sources/IssueReporting/IsTesting.swift",
        "Sources/IssueReporting/IssueReporter.swift",
        "Sources/IssueReporting/IssueReporters/BreakpointReporter.swift",
        "Sources/IssueReporting/IssueReporters/FatalErrorReporter.swift",
        "Sources/IssueReporting/IssueReporters/RuntimeWarningReporter.swift",
        "Sources/IssueReporting/ReportIssue.swift",
        "Sources/IssueReporting/TestContext.swift",
        "Sources/IssueReporting/Unimplemented.swift",
        "Sources/IssueReporting/WithExpectedIssue.swift",
        "Sources/IssueReporting/WithIssueContext.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "IssueReportingTestSupport.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "IssueReportingTestSupport",
    package_name = "xctest-dynamic-overlay",
    srcs = [
        "Sources/IssueReportingTestSupport/SwiftTesting.swift",
        "Sources/IssueReportingTestSupport/XCTest.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "XCTestDynamicOverlay.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = ["@swiftpkg_xctest_dynamic_overlay//:IssueReporting.rspm"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "XCTestDynamicOverlay",
    package_name = "xctest-dynamic-overlay",
    srcs = [
        "Sources/XCTestDynamicOverlay/Internal/Deprecations.swift",
        "Sources/XCTestDynamicOverlay/Internal/Exports.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "IssueReporting",
    deps = ["@swiftpkg_xctest_dynamic_overlay//:IssueReporting.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "IssueReportingTestSupport",
    deps = ["@swiftpkg_xctest_dynamic_overlay//:IssueReportingTestSupport.rspm"],
    visibility = ["//visibility:public"],
)

swift_library_group(
    name = "XCTestDynamicOverlay",
    deps = ["@swiftpkg_xctest_dynamic_overlay//:XCTestDynamicOverlay.rspm"],
    visibility = ["//visibility:public"],
)
